--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,18 @@
   <title>Page Title</title>
   <!-- <link rel="stylesheet" href="styles.css"> -->
   <!-- <script src="script.js"></script> -->
+  <script type="text/javascript">
+    var print = console.log.bind(console)
+
+    window.addEventListener('load', function(ev) {
+      fetch('/api/auth/', {
+        credentials: 'include'
+      }).then(res => res.json())
+      .then(res => {
+        print(res)
+      })
+    })
+  </script>
 </head>
 <body>
   
