Move inline js into external files/modules

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,45 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Page Title</title>
   <!-- <link rel="stylesheet" href="styles.css"> -->
+  <style type="text/css">
+    body {
+      background: #444;
+    }
+  </style>
   <!-- <script src="script.js"></script> -->
   <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script src="/static/js/index.js"></script>
   <script type="text/javascript">
     var print = console.log.bind(console)
 
     // REF: https://developer.mozilla.org/en/docs/Web/API/WindowBase64/Base64_encoding_and_decoding
-    function b64EncodeUnicode(str) {
-      return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g,
-        function toSolidBytes(match, p1) {
-          return String.fromCharCode('0x' + p1);
-        }))
-    }
+    // function b64EncodeUnicode(str) {
+    //   return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g,
+    //     function toSolidBytes(match, p1) {
+    //       return String.fromCharCode('0x' + p1);
+    //     }))
+    // }
 
-    function loadScript(url) {
-      var id = b64EncodeUnicode(url)
-      var script = document.getElementById(id)
-      if(script)
-        return Promise.resolve(script)
-      script = document.createElement('script')
-      script.setAttribute('defer', '')
-      script.setAttribute('async', '')
-      var head = document.getElementsByTagName('head')[0]
-      var p = new Promise(function(res, rej) {
-        script.id = id
-        script.onload = function(ev) {
-          res(script)
-        }
-        script.onerror = function(ev) {
-          rej(script)
-        }
-        script.src = url
-        head.append(script)
-      })
-      return p
-    }
+    // function loadScript(url) {
+    //   var id = b64EncodeUnicode(url)
+    //   var script = document.getElementById(id)
+    //   if(script)
+    //     return Promise.resolve(script)
+    //   script = document.createElement('script')
+    //   script.setAttribute('defer', '')
+    //   script.setAttribute('async', '')
+    //   var head = document.getElementsByTagName('head')[0]
+    //   var p = new Promise(function(res, rej) {
+    //     script.id = id
+    //     script.onload = function(ev) {
+    //       res(script)
+    //     }
+    //     script.onerror = function(ev) {
+    //       rej(script)
+    //     }
+    //     script.src = url
+    //     head.append(script)
+    //   })
+    //   return p
+    // }
 
-    var googleScriptSrc = '//apis.google.com/js/platform.js'
-    var facebookScriptSrc = '//connect.facebook.net/en_US/sdk.js'
+    // var googleScriptSrc = '//apis.google.com/js/platform.js'
+    // var facebookScriptSrc = '//connect.facebook.net/en_US/sdk.js'
 
     // function googleSignin() {
     //   loadScript(googleScriptSrc)
@@ -76,140 +82,173 @@
     //   }
     // }
 
-    class Auth {
-      constructor({provider, scriptSrc, cred}) {
-        if(!(provider && scriptSrc && cred))
-          throw 'Must have a provider, scriptSrc, and cred arg'
+    // class Auth {
+    //   constructor({provider, scriptSrc, cred}) {
+    //     if(!(provider && scriptSrc && cred))
+    //       throw 'Must have a provider, scriptSrc, and cred arg'
 
-        this.provider = provider
-        this.scriptSrc = scriptSrc
-        this.cred = cred
+    //     this.provider = provider
+    //     this.scriptSrc = scriptSrc
+    //     this.cred = cred
 
-        if(provider == 'google') {
-          this.signin = this.googleSignin
-          this.signout = this.googleSignout
-        }
-        else if(provider == 'facebook') {
-          this.signin = this.facebookSignin
-          this.signout = this.facebookSignout
-        }
-        else {
-          throw 'Unknown provider ' + provider
-        }
-      }
+    //     if(provider == 'google') {
+    //       this.signin = this.googleSignin
+    //       this.signout = this.googleSignout
+    //     }
+    //     else if(provider == 'facebook') {
+    //       this.signin = this.facebookSignin
+    //       this.signout = this.facebookSignout
+    //     }
+    //     else {
+    //       throw 'Unknown provider ' + provider
+    //     }
+    //   }
 
-      get googleUser() {
-        if(this.ga)
-          return this.ga.currentUser.get()
-        else
-          return null
-      }
+    //   get googleUser() {
+    //     if(this.ga)
+    //       return this.ga.currentUser.get()
+    //     else
+    //       return null
+    //   }
 
-      get googleIsIn() {
-        if(this.ga)
-          return this.ga.isSignedIn.get()
-        else
-          null
-      }
+    //   get googleIsIn() {
+    //     if(this.ga)
+    //       return this.ga.isSignedIn.get()
+    //     else
+    //       null
+    //   }
 
-      get googleIsOut() {
-        return !this.isIn
-      }
+    //   get googleIsOut() {
+    //     return !this.isIn
+    //   }
 
-      googleSignin() {
-        var self = this
-        return loadScript(self.scriptSrc)
-        .then(s => {
-          return new Promise(function(res, rej) {
-            gapi.load('auth2', function() {res()})
-          })
-        })
-        .then(() => {
-          return gapi.auth2.init(self.cred).then()
-        })
-        .then(() => {
-          self.ga = gapi.auth2.getAuthInstance()
-          return self.ga.grantOfflineAccess()
-        })
-        .then(resp => {
-          var authCode = resp.code
-        })
-        .catch(err => {
-          // print(err)
-          alert('Could not authenticate with Google.')
-        })
-      }
+    //   googleSignin() {
+    //     var self = this
+    //     return loadScript(self.scriptSrc)
+    //     .then(s => {
+    //       return new Promise(function(res, rej) {
+    //         gapi.load('auth2', function() {res()})
+    //       })
+    //     })
+    //     .then(() => {
+    //       return gapi.auth2.init(self.cred).then()
+    //     })
+    //     .then(() => {
+    //       self.ga = gapi.auth2.getAuthInstance()
+    //       return self.ga.grantOfflineAccess()
+    //     })
+    //     .then(resp => {
+    //       return fetch('/api/auth/', {
+    //         method: 'get',
+    //         credentials: 'include',
+    //         headers: {
+    //           'X-Requested-With': 'Fetch',
+    //           'Authorization': 'Google ' + resp.code
+    //         }
+    //       })
+    //     })
+    //     .then(resp => Promise.all([resp, resp.json()]))
+    //     .then(([resp, json]) => {
+    //       if(!resp.ok)
+    //         throw json
+    //       return json
+    //     })
+    //     .then(resp => {
+    //       print(resp)
+    //     })
+    //     .catch(err => {
+    //       print(err)
+    //       alert('Could not authenticate with Google.')
+    //     })
+    //   }
 
-      googleSignout() {
-        if(gapi && gapi.auth2) {
-          return gapi.auth2.getAuthInstance().signOut();
-        }
-        else
-          return Promise.reject()
-      }
+    //   googleSignout() {
+    //     if(gapi && gapi.auth2) {
+    //       return gapi.auth2.getAuthInstance().signOut();
+    //     }
+    //     else
+    //       return Promise.reject()
+    //   }
 
-      googleIsAuthorized() {
-        if(this.user)
-          return this.user.hasGrantedScopes(this.cred.scope)
-        else
-          return null
-      }
+    //   googleIsAuthorized() {
+    //     if(this.user)
+    //       return this.user.hasGrantedScopes(this.cred.scope)
+    //     else
+    //       return null
+    //   }
 
-      get facebookUser() {
+    //   get facebookUser() {
 
-      }
+    //   }
 
-      facebookSignin() {
-        var self = this
-        return loadScript(self.scriptSrc)
-        .then(function(s) {
-          return FB.init(self.cred)
-        })
-        .then(function() {
-          return new Promise((res, rej) => {
-            FB.login(resp => {
-              if(resp.status == 'connected' && resp.authResponse)
-                res(resp)
-              else
-                rej(resp)
-            })
-          })
-        })
-        .then(function(resp) {
-          print(resp)
-          // var authCode = resp.code
-        })
-        .catch(function(err) {
-          print(err)
-          alert('Could not authenticate with Facebook.')
-        })
-      }
+    //   facebookSignin() {
+    //     var self = this
+    //     return loadScript(self.scriptSrc)
+    //     .then(function(s) {
+    //       return FB.init(self.cred)
+    //     })
+    //     .then(function() {
+    //       return new Promise((res, rej) => {
+    //         FB.login(resp => {
+    //           if(resp.status == 'connected' && resp.authResponse)
+    //             res(resp)
+    //           else
+    //             rej(resp)
+    //         }, {scope: self.cred.scope, return_scopes: true})
+    //       })
+    //     })
+    //     .then(function(resp) {
+    //       return fetch('/api/auth/', {
+    //         method: 'get',
+    //         credentials: 'include',
+    //         headers: {
+    //           'X-Requested-With': 'Fetch',
+    //           'Authorization': 'Facebook ' + resp.authResponse.accessToken
+    //         }
+    //       })
+    //     })
+    //     .then(resp => Promise.all([resp, resp.json()]))
+    //     .then(([resp, json]) => {
+    //       if(!resp.ok)
+    //         throw json
+    //       return json
+    //     })
+    //     .then(resp => {
+    //       print(resp)
+    //     })
+    //     .catch(function(err) {
+    //       print(err)
+    //       alert('Could not authenticate with Facebook.')
+    //     })
+    //   }
 
-      facebookSignout() {
-        if(FB) {
-          return new Promise((res, rej) => {
-            FB.logout((resp) => {
-              print(resp)
-              res(resp)
-            });
-          })
-        }
-        else
-          return Promise.reject()
-      }
+    //   facebookSignout() {
+    //     if(FB) {
+    //       return new Promise((res, rej) => {
+    //         FB.logout((resp) => {
+    //           print(resp)
+    //           res(resp)
+    //         });
+    //       })
+    //     }
+    //     else
+    //       return Promise.reject()
+    //   }
 
-    }
+    // }
 
-    var gg = new Auth({provider: 'google', scriptSrc:googleScriptSrc, cred:{
-        'clientId': '',
-        'scope': 'profile email'
-      }})
+    // var gg = new Auth({provider: 'google', scriptSrc:googleScriptSrc, cred:{
+    //     'clientId': '32902065428-sbal87ccp0eedjoo2opcq0tr22ha3884.apps.googleusercontent.com',
+    //     'scope': 'profile email'
+    //   }})
 
-    var fb = new Auth({provider: 'facebook', scriptSrc:facebookScriptSrc, cred:{
-        'appId': '',
-        'version': 'v2.9',
-        'scope': 'email'
-      }})
+    // var fb = new Auth({provider: 'facebook', scriptSrc:facebookScriptSrc, cred:{
+    //     'appId': '126309204593715',
+    //     'cookie': true,
+    //     'xfbml': true,
+    //     'version': 'v2.9',
+    //     'scope': 'email'
+    //   }})
 
     window.addEventListener('load', function(ev) {
       // fetch('/api/users/', {
