--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@
       font-weight: 300;
     }
 
+    h1, h2, h3, h4, h5, h6 {
+      font-weight: 500;
+    }
+
     a {
       text-decoration: none;
     }
@@ -29,11 +33,12 @@
     }
 
     body {
-      background-color: /*#fff*/ #009688 /*#1c1440*/;
+      background-color: /*#fff*/ /*#009688*/ /*#1c1440*/ #00BCD4;
       display: flex;
       flex-flow: column wrap;
       justify-content: space-between;
       font-family: Roboto, sans-serif;
+      color: #fff;
     }
 
     .bg {
