Fix `CircularProgress` wobble

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,12 @@
       background-attachment: fixed;
       /*box-shadow: 0 0 400px rgba(0,0,0,0.7) inset;*/
     }
+
+    .CircularProgress svg {
+      position: absolute !important;
+      top: 0px;
+      left: 0px;
+    }
   </style>
   <!-- <script src="script.js"></script> -->
   <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
